# obstacle_detector

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  rviz_plugins.xml
include/obstacle_detector/: obstacle_extractor.h  obstacle_publisher.h  obstacle_tracker.h  scan_rectifier.h  scans_merger.h
include/obstacle_detector/displays/: circle_visual.h  obstacles_display.h  segment_visual.h
include/obstacle_detector/panels/: obstacle_extractor_panel.h  obstacle_publisher_panel.h  obstacle_tracker_panel.h  scans_merger_panel.h
include/obstacle_detector/utilities/: circle.h  figure_fitting.h  kalman.h  math_utilities.h  point.h  point_set.h  segment.h  tracked_obstacle.h
launch/: demo.launch  input_scan.launch  nodelets.launch  nodes.launch
msg/: CircleObstacle.msg  Obstacles.msg  SegmentObstacle.msg
resources/: Using hokuyo_node with udev.txt  obstacle_detector.rviz  scans_demo.bag
src/: obstacle_extractor.cpp  obstacle_publisher.cpp  obstacle_tracker.cpp  scan_rectifier.cpp  scans_merger.cpp
src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
src/nodelets/: obstacle_extractor_nodelet.cpp  obstacle_publisher_nodelet.cpp  obstacle_tracker_nodelet.cpp  scan_rectifier_nodelet.cpp  scans_merger_nodelet.cpp
src/nodes/: obstacle_extractor_node.cpp  obstacle_publisher_node.cpp  obstacle_tracker_node.cpp  scan_rectifier_node.cpp  scans_merger_node.cpp
src/panels/: obstacle_extractor_panel.cpp  obstacle_publisher_panel.cpp  obstacle_tracker_panel.cpp  scans_merger_panel.cpp
